[package]
name = "garage-mqtt-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12"
rumqttc = "0.25"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
rustls = "0.23"
rustls-pemfile = "2.2"
